Build a Fraction: Store progress when pushing back button
Build a Fraction: Don't highlight the target box
Build a Fraction: Only consider the target collection box for matching (based on centers), otherwise students can overlap many boxes instead of thinking of the correct answer
Fraction Matcher: Added a "refresh" level button that creates new challenges for the same level
Build a Fraction: Improved support for pie shapes
Build a Fraction: Initial support for pie shapes
Fraction Matcher: Switched to use common Vector2D implementation, see #3374
Fraction Matcher: Moved smiling face down a little bit
# 1.00.09 (66005) Jul 18, 2012
Build a Fraction: Numbers: Send fraction skeleton to toolbox location when dropped in toolbox
Build a Fraction: Numbers: Fixed reset for fraction skeletons
Build a Fraction: Numbers: Made different card size for 1 vs 2 digit numbers
Build a Fraction: Numbers: Have the fraction skeleton start smaller in the toolbox, and reduce the toolbox height
Build a Fraction: Put reset and refresh buttons horizontally next to each other centered below the level title
# 1.00.08 (65996) Jul 18, 2012
Fraction Matcher: Animate level selection screen/game screen
Fraction Matcher: Added support for RTL languages in the control panel, see #3369
Fraction Matcher: Moved smiling face to the right so it doesn't overlap with back button
Fraction Matcher: Converted "new game" button to a back button
Build a Fraction: Shapes: Stack pieces up and to the left with less spacing
Fraction Matcher: Fixed: "My Matches" text can go offscreen to the left, see #3368
# 1.00.07 (65969) Jul 17, 2012
Build a Fraction: Numbers: Fixed: Scoring cells weren't highlighting on levels >=2
Build a Fraction: Numbers: Fixed: Ding sound wasn't playing for individual matches
# 1.00.06 (65965) Jul 17, 2012
Build a Fraction: Shapes: Use stacks of cards for level selection icon
Build a Fraction: Shapes: Fixed: Shapes put into container on level 3 have pieces drag when they shouldn't.